@@ -265,6 +265,9 @@ https://github.com/networkupstools/nut/milestone/11
      the alarm for immediate shutdown in critical situation. [#321]
    * optimized `parse_status()` by not checking further strings if we had
      a match; report unexpected tokens in debug log. [#415]
+   * revised internal `do_notify()` method to support formatting strings
+     with two `%s` placeholders, to use if certain use-cases pass any extra
+     information (e.g. not just "we have alarms" but their values too). [#415]
 
  - More systemd integration:
    * Introduced a `nut-sleep.service` unit which stops `nut.target` when a
